--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
-<div class="container"> 
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Angular 2</h1><hr>      
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <app-sample></app-sample>
-    </div>
-  </div>
+<div class="container">
+  <app-databinding></app-databinding>
 </div>
