content projection, local references, view and content child, lifecycle

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-databinding></app-databinding>
+  <app-lifecycle [defCls]="'btn btn-primary'" *ngIf="isVs"></app-lifecycle>
+
+  <input type="button" class="btn" (click)="isVs = !isVs" value="Okay" />
 </div>
