directive: attribute directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-  <app-lifecycle [defCls]="'btn btn-primary'" *ngIf="isVs"></app-lifecycle>
-
-  <input type="button" class="btn" (click)="isVs = !isVs" value="Okay" />
+  <app-directives></app-directives>
 </div>
