--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -59,7 +59,7 @@
   </div>
 </div>
 <app-rating-bar 
-  [heartColor]="'green'" 
+  [heartColor]="'blue'" 
   (heartClick)="cnt = $event">
 </app-rating-bar>
 
