--- a/src/app/directives/attr-dir.component.html
+++ b/src/app/directives/attr-dir.component.html
@@ -14,13 +14,12 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <input type="text" resizer/>
+    <input type="text" resizer [txtWd]="'100px'" />
   </div>
 </div>
 
-<div class="row" >
+<div class="row">
   <div class="col-md-12">
-    <input type="text" resizer/>
+    <input type="text" resizer [txtWd]="'600px'" />
   </div>
 </div>
-
